Link to Use-Case UI

--- a/InvestmentExchangeCommunity.html
+++ b/InvestmentExchangeCommunity.html
@@ -2,7 +2,7 @@
 <html>
     <head><title>Investment Exchange Community</title></head>
     <body>
-        <h1>Indextment Exchange Community</h1>
+        <h1>Investment Exchange Community</h1>
         <a href="index.html">HOME</a>
     </body>
 </html>
