Link to Use-Case UI

--- a/DataScrapingTools.html
+++ b/DataScrapingTools.html
@@ -2,7 +2,9 @@
 <html>
     <head><title>Data Scraping Tools</title></head>
     <body>
-        <h1>Data Scraping Tools</h1>
+        <h1>Industry Selection</h1>
+        <h2>Data Selection</h2>
+        <h3>Key Words Selection</h3>
         <a href="index.html">HOME</a>
     </body>
 </html>
