--- a/FinancialAnalyticsTools.html
+++ b/FinancialAnalyticsTools.html
@@ -2,7 +2,9 @@
 <html>
     <head><title>Financial Analytics Tools</title></head>
     <body>
-        <h1>Financial Analytics Tools</h1>
+        <h1>ESG Data Analysis</h1>
+        <h2>NPL Data Analysis</h2>
+        <h3>Corporate Finance Analysis</h3>
         <a href="index.html">HOME</a>
     </body>
 </html>
