--- a/IntelligentInformationAcquisitionAndPushServices.html
+++ b/IntelligentInformationAcquisitionAndPushServices.html
@@ -2,7 +2,7 @@
 <html>
     <head><title>Intelligent Information Acquisition and Push Services</title></head>
     <body>
-        <h1>Intelligent Information Acquisition and Push Services</h1>
+        <h1>Customer Portfolio Analysis</h1>
         <a href="index.html">HOME</a>
     </body>
 </html>
