Link to Use-Case UI

--- a/IntelligentInformationAcquisitionAndPushServices.html
+++ b/IntelligentInformationAcquisitionAndPushServices.html
@@ -3,6 +3,7 @@
     <head><title>Intelligent Information Acquisition and Push Services</title></head>
     <body>
         <h1>Customer Portfolio Analysis</h1>
+        <h2>Information Scrapting</h2>
         <a href="index.html">HOME</a>
     </body>
 </html>
