--- a/CreateNewAccount.html
+++ b/CreateNewAccount.html
@@ -1,16 +1,37 @@
 <!doctype html>
 <html>
-    <head><title>Create A New Account</title></head>
+    <head>
+        <title>Register For New Acccount</title>        
+    </head>
     <body>
-        <h1>Create A New Account</h1>
+        <h1>Register For New Acccount</h1>
         <input type="text"     placeholder="E-Mail:">         <br>
         <input type="text"     placeholder="Username:">       <br>
         <input type="password" placeholder="Password:">       <br>
         <input type="password" placeholder="Verify Pass:">    <br>
-        <input type="text"     placeholder="Address Line1:">  <br>
-        <input type="text"     placeholder="Address Line2:">  <br>
-        <input type="text"     placeholder="Address Line3:">  <br>
-        <input type="text"     placeholder="Zip Code:">       <br>
+        <h2>Devices Owned</h2>
+        <div>Click on all the devices you own:</div>>
+        <input type="checkbox"><label>Computer</label><br>
+        <input type="checkbox"><label>Laptop</label><br>
+        <input type="checkbox"><label>Smartphone</label><br>
+        <input type="checkbox"><label>Other:</label><input type="text" placeholder ="Specify:"><br>
+        <br>
+        <h2>Sex</h2>>
+        <input type="radio" name="sex"><label>Male</label><br>
+        <input type="radio" name="sex"><label>Female</label><br>
+        <input type="radio" name="sex"><label>Prefer not to answer</label><br>
+        <br>Sex (alternative)</h2>
+        <select>
+            <option>Male</option>
+            <option>Female</option>
+            <option>Prefer not to answer</option>
+        </select><br><br>
+        <h2>Bio</h2>
+        <div>Tell other users about yourself:</div>
+        <textarea rows=5 cols=50></textarea><br><br>
+        <h2>Upload a Picture</h2>
+        <input type="file"><br><br>
+        <input type="button"   value="Register" onClick="location.href='Thank-You-Registration.html'"><br>
         <a href="index.html">HOME</a>
     </body>
 </html>
