--- a/TransactionTools.html
+++ b/TransactionTools.html
@@ -28,7 +28,7 @@
                 <td><img src="Stock.jpg" style="width: 200px;"></td>
                 <td style="text-align: left;vertical-align: top">
                     High Risk and High Return.<br>
-                    <input type="button" value="Add">
+                    <input type="button" value="In to this Industry">
                 </td>
             </tr>
         </table>
@@ -38,7 +38,7 @@
                 <td><img src="Bond.jpg" style="width: 200px;"></td>
                 <td style="text-align: left;vertical-align: top">
                     Various Types of Bonds Free Choose For You.<br>
-                    <input type="button" value="Add">
+                    <input type="button" value="In to this Industry">
                 </td>
             </tr>
         </table>
@@ -48,7 +48,7 @@
                 <td><img src="Insurance.jpg" style="width: 200px;"></td>
                 <td style="text-align: left;vertical-align: top">
                     the Most Basic Investment in People.<br>
-                    <input type="button" value="Add">
+                    <input type="button" value="In to this Industry">
                 </td>
             </tr>
         </table>
@@ -58,7 +58,7 @@
                 <td><img src="Saving.jpg" style="width: 200px;"></td>
                 <td style="text-align: left;vertical-align: top">
                     Don't Hide the Money under the Pillow Anymore.<br>
-                    <input type="button" value="Add">
+                    <input type="button" value="In to this Industry">
                 </td>
             </tr>
         </table>
