--- a/SignIn.html
+++ b/SignIn.html
@@ -5,6 +5,7 @@
         <h1>Sign In</h1>
         <input type="text"     placeholder="E-Mail/Username:"> <br>
         <input type="password" placeholder="Password:">        <br>
+        <input type="button" value="Click to Sign In">
         <a href="index.html">HOME</a>
     </body>
 </html>
